[package]
name = "e62_2b_link_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["rustls-tls"] }
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
tokio = { version="1.37.0", features = ["full"] }
scraper = "0.19.0"
thiserror = "1.0.58"
# tokio-websockets = { version = "0.7.0", features = ["client", "fastrand", "server", "sha1_smol"] }
